@@ -26,6 +26,25 @@ class Roda
     # :loop :: Whether to call the stream block continuously until
     #          the connection is closed.
     #
+    # If the :loop option is used, you can override the
+    # handle_stream_error method to change how exceptions
+    # are handled during streaming. This method is passed the
+    # exception and the stream.  By default, this method
+    # just reraises the exception, but you can choose to output
+    # the an error message to the stream, before raising:
+    #
+    #   def handle_stream_error(e, out)
+    #     out << 'ERROR!'
+    #     raise e
+    #   end
+    #
+    # Ignore errors completely while streaming:
+    #
+    #   def handle_stream_error(e, out)
+    #   end
+    #
+    # or handle the errors in some other way.
+    #
     # The implementation was originally taken from Sinatra,
     # which is also released under the MIT License:
     #
@@ -159,12 +178,21 @@ class Roda
           if opts[:loop]
             block = proc do |out|
               until out.closed?
-                yield(out)
+                begin
+                  yield(out)
+                rescue => e
+                  handle_stream_error(e, out)
+                end
               end
             end
           end
 
           throw :halt, @_response.finish_with_body(Stream.new(opts, &block))
+        end
+
+        # Handle exceptions raised while streaming when using :loop
+        def handle_stream_error(e, out)
+          raise e
         end
       end
     end
